# Agent-Jailbreaking-Agents

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
.kiro/specs/agent-jailbreak-research/: design.md  requirements.md  tasks.md
alembic/: env.py
data/: __init__.py
docs/: error_handling_implementation.md  transformation_protocols.md
examples/: data_loading_example.py
src/: __init__.py  config.py
src/agents/: __init__.py  base.py  persuadee.py  persuader.py  safety_judge.py
src/analysis/: __init__.py  strategy_analyzer.py
src/api/: main.py
src/cli/: experiment.py
src/data/: __init__.py  loader.py  transformer.py  validator.py
src/database/: __init__.py  connection.py
src/workflow/: __init__.py  flow_control.py  graph.py  state_manager.py  test_basic_workflow.py  test_complete_workflow.py  test_flow_control.py
tests/: test_agents_base.py  test_agents_persuadee.py  test_agents_persuader.py  test_agents_safety_judge.py  test_data_loader.py  test_data_transformer.py  test_data_validator.py  test_strategy_analyzer.py  test_strategy_integration.py  test_workflow_error_handling.py
